--- a/app/src/main/res/layout/activity_interval.xml
+++ b/app/src/main/res/layout/activity_interval.xml
@@ -291,6 +291,52 @@
                 android:textSize="18sp" />
         </RelativeLayout>
 
+        <RelativeLayout
+            android:id="@+id/intervalNoteView"
+            style="@style/Widget.AppCompat.Button"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_vertical"
+            android:layout_marginBottom="4dp"
+            android:background="@android:color/background_light"
+            android:clickable="true">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentRight="true"
+                android:layout_centerInParent="true"
+                android:layout_marginRight="65dp"
+                android:text="@string/high_score"
+                android:textSize="18sp" />
+
+            <TextView
+                android:id="@+id/intervalNoteText"
+                android:layout_width="210dp"
+                android:layout_height="wrap_content"
+                android:layout_marginVertical="10dp"
+                android:layout_marginStart="15dp"
+                android:layout_marginLeft="15dp"
+                android:text="@string/interval_note_text"
+                android:textAllCaps="true"
+                android:textColor="@color/colorPrimaryDark"
+                android:textSize="18sp" />
+
+            <TextView
+                android:id="@+id/intervalNoteHigh"
+                android:layout_width="50dp"
+                android:layout_height="wrap_content"
+                android:layout_alignParentEnd="true"
+                android:layout_alignParentRight="true"
+                android:layout_centerInParent="true"
+                android:layout_marginEnd="15dp"
+                android:layout_marginRight="15dp"
+                android:gravity="end"
+                android:text="0/10"
+                android:textAllCaps="true"
+                android:textSize="18sp" />
+        </RelativeLayout>
+
 
     </LinearLayout>
 </ScrollView>
