--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -35,6 +35,7 @@
             android:layout_marginBottom="4dp"
             android:background="@android:color/background_light"
             android:text="@string/fixed_do"
+            android:textAllCaps="false"
             android:textColor="@color/colorPrimaryDark"
             android:textSize="21sp" />
 
