--- a/app/src/main/res/layout/activity_chord.xml
+++ b/app/src/main/res/layout/activity_chord.xml
@@ -13,13 +13,22 @@
         android:background="@color/colorPrimary"
         android:orientation="vertical">
 
+        <Button
+            android:id="@+id/theoryButton3"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="4dp"
+            android:layout_marginBottom="4dp"
+            android:background="@android:color/background_light"
+            android:text="Теория"
+            android:textSize="20sp" />
+
         <RelativeLayout
             android:id="@+id/majorChordView"
             style="@style/Widget.AppCompat.Button"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="center_vertical"
-            android:layout_marginTop="4dp"
             android:layout_marginBottom="4dp"
             android:background="@android:color/background_light"
             android:clickable="true">
