--- a/app/src/main/res/layout/activity_interval.xml
+++ b/app/src/main/res/layout/activity_interval.xml
@@ -13,13 +13,22 @@
         android:background="@color/colorPrimary"
         android:orientation="vertical">
 
+        <Button
+            android:id="@+id/theoryButton2"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="4dp"
+            android:layout_marginBottom="4dp"
+            android:background="@android:color/background_light"
+            android:text="Теория"
+            android:textSize="20sp" />
+
         <RelativeLayout
             android:id="@+id/perfectFifthView"
             style="@style/Widget.AppCompat.Button"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="center_vertical"
-            android:layout_marginTop="4dp"
             android:layout_marginBottom="4dp"
             android:background="@android:color/background_light"
             android:clickable="true">
@@ -256,15 +265,6 @@
             android:clickable="true">
 
             <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignParentRight="true"
-                android:layout_centerInParent="true"
-                android:layout_marginRight="65dp"
-                android:text="@string/high_score"
-                android:textSize="18sp" />
-
-            <TextView
                 android:id="@+id/minorSeventhText"
                 android:layout_width="210dp"
                 android:layout_height="wrap_content"
@@ -277,7 +277,292 @@
                 android:textSize="18sp" />
 
             <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentRight="true"
+                android:layout_centerInParent="true"
+                android:layout_marginRight="65dp"
+                android:text="@string/high_score"
+                android:textSize="18sp" />
+
+            <TextView
                 android:id="@+id/minorSeventhHigh"
+                android:layout_width="50dp"
+                android:layout_height="wrap_content"
+                android:layout_alignParentEnd="true"
+                android:layout_alignParentRight="true"
+                android:layout_centerInParent="true"
+                android:layout_marginEnd="15dp"
+                android:layout_marginRight="15dp"
+                android:gravity="end"
+                android:text="0/10"
+                android:textAllCaps="true"
+                android:textSize="18sp" />
+        </RelativeLayout>
+
+        <RelativeLayout
+            android:id="@+id/majorSecondView"
+            style="@style/Widget.AppCompat.Button"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_vertical"
+            android:layout_marginBottom="4dp"
+            android:background="@android:color/background_light"
+            android:clickable="true">
+
+            <TextView
+                android:id="@+id/majorSecondText"
+                android:layout_width="210dp"
+                android:layout_height="wrap_content"
+                android:layout_marginVertical="10dp"
+                android:layout_marginStart="15dp"
+                android:layout_marginLeft="15dp"
+                android:text="@string/major_second_text"
+                android:textAllCaps="true"
+                android:textColor="@color/colorPrimaryDark"
+                android:textSize="18sp" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentRight="true"
+                android:layout_centerInParent="true"
+                android:layout_marginRight="65dp"
+                android:text="@string/high_score"
+                android:textSize="18sp" />
+
+            <TextView
+                android:id="@+id/majorSecondHigh"
+                android:layout_width="50dp"
+                android:layout_height="wrap_content"
+                android:layout_alignParentEnd="true"
+                android:layout_alignParentRight="true"
+                android:layout_centerInParent="true"
+                android:layout_marginEnd="15dp"
+                android:layout_marginRight="15dp"
+                android:gravity="end"
+                android:text="0/10"
+                android:textAllCaps="true"
+                android:textSize="18sp" />
+        </RelativeLayout>
+
+        <RelativeLayout
+            android:id="@+id/minorSecondView"
+            style="@style/Widget.AppCompat.Button"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_vertical"
+            android:layout_marginBottom="4dp"
+            android:background="@android:color/background_light"
+            android:clickable="true">
+
+            <TextView
+                android:id="@+id/minorSecondText"
+                android:layout_width="210dp"
+                android:layout_height="wrap_content"
+                android:layout_marginVertical="10dp"
+                android:layout_marginStart="15dp"
+                android:layout_marginLeft="15dp"
+                android:text="@string/minor_second_text"
+                android:textAllCaps="true"
+                android:textColor="@color/colorPrimaryDark"
+                android:textSize="18sp" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentRight="true"
+                android:layout_centerInParent="true"
+                android:layout_marginRight="65dp"
+                android:text="@string/high_score"
+                android:textSize="18sp" />
+
+            <TextView
+                android:id="@+id/minorSecondHigh"
+                android:layout_width="50dp"
+                android:layout_height="wrap_content"
+                android:layout_alignParentEnd="true"
+                android:layout_alignParentRight="true"
+                android:layout_centerInParent="true"
+                android:layout_marginEnd="15dp"
+                android:layout_marginRight="15dp"
+                android:gravity="end"
+                android:text="0/10"
+                android:textAllCaps="true"
+                android:textSize="18sp" />
+        </RelativeLayout>
+
+        <RelativeLayout
+            android:id="@+id/majorSixthView"
+            style="@style/Widget.AppCompat.Button"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_vertical"
+            android:layout_marginBottom="4dp"
+            android:background="@android:color/background_light"
+            android:clickable="true">
+
+            <TextView
+                android:id="@+id/majorSixthText"
+                android:layout_width="210dp"
+                android:layout_height="wrap_content"
+                android:layout_marginVertical="10dp"
+                android:layout_marginStart="15dp"
+                android:layout_marginLeft="15dp"
+                android:text="@string/major_sixth_text"
+                android:textAllCaps="true"
+                android:textColor="@color/colorPrimaryDark"
+                android:textSize="18sp" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentRight="true"
+                android:layout_centerInParent="true"
+                android:layout_marginRight="65dp"
+                android:text="@string/high_score"
+                android:textSize="18sp" />
+
+            <TextView
+                android:id="@+id/majorSixthHigh"
+                android:layout_width="50dp"
+                android:layout_height="wrap_content"
+                android:layout_alignParentEnd="true"
+                android:layout_alignParentRight="true"
+                android:layout_centerInParent="true"
+                android:layout_marginEnd="15dp"
+                android:layout_marginRight="15dp"
+                android:gravity="end"
+                android:text="0/10"
+                android:textAllCaps="true"
+                android:textSize="18sp" />
+        </RelativeLayout>
+
+        <RelativeLayout
+            android:id="@+id/minorSixthView"
+            style="@style/Widget.AppCompat.Button"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_vertical"
+            android:layout_marginBottom="4dp"
+            android:background="@android:color/background_light"
+            android:clickable="true">
+
+            <TextView
+                android:id="@+id/minorSixthText"
+                android:layout_width="210dp"
+                android:layout_height="wrap_content"
+                android:layout_marginVertical="10dp"
+                android:layout_marginStart="15dp"
+                android:layout_marginLeft="15dp"
+                android:text="@string/minor_sixth_text"
+                android:textAllCaps="true"
+                android:textColor="@color/colorPrimaryDark"
+                android:textSize="18sp" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentRight="true"
+                android:layout_centerInParent="true"
+                android:layout_marginRight="65dp"
+                android:text="@string/high_score"
+                android:textSize="18sp" />
+
+            <TextView
+                android:id="@+id/minorSixthHigh"
+                android:layout_width="50dp"
+                android:layout_height="wrap_content"
+                android:layout_alignParentEnd="true"
+                android:layout_alignParentRight="true"
+                android:layout_centerInParent="true"
+                android:layout_marginEnd="15dp"
+                android:layout_marginRight="15dp"
+                android:gravity="end"
+                android:text="0/10"
+                android:textAllCaps="true"
+                android:textSize="18sp" />
+        </RelativeLayout>
+
+        <RelativeLayout
+            android:id="@+id/diminishedFifthView"
+            style="@style/Widget.AppCompat.Button"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_vertical"
+            android:layout_marginBottom="4dp"
+            android:background="@android:color/background_light"
+            android:clickable="true">
+
+            <TextView
+                android:id="@+id/diminishedFifthText"
+                android:layout_width="210dp"
+                android:layout_height="wrap_content"
+                android:layout_marginVertical="10dp"
+                android:layout_marginStart="15dp"
+                android:layout_marginLeft="15dp"
+                android:text="@string/diminished_fifth_text"
+                android:textAllCaps="true"
+                android:textColor="@color/colorPrimaryDark"
+                android:textSize="18sp" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentRight="true"
+                android:layout_centerInParent="true"
+                android:layout_marginRight="65dp"
+                android:text="@string/high_score"
+                android:textSize="18sp" />
+
+            <TextView
+                android:id="@+id/diminishedFifthHigh"
+                android:layout_width="50dp"
+                android:layout_height="wrap_content"
+                android:layout_alignParentEnd="true"
+                android:layout_alignParentRight="true"
+                android:layout_centerInParent="true"
+                android:layout_marginEnd="15dp"
+                android:layout_marginRight="15dp"
+                android:gravity="end"
+                android:text="0/10"
+                android:textAllCaps="true"
+                android:textSize="18sp" />
+        </RelativeLayout>
+
+        <RelativeLayout
+            android:id="@+id/augmentedFourthView"
+            style="@style/Widget.AppCompat.Button"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_vertical"
+            android:layout_marginBottom="4dp"
+            android:background="@android:color/background_light"
+            android:clickable="true">
+
+            <TextView
+                android:id="@+id/augmentedFourthText"
+                android:layout_width="180dp"
+                android:layout_height="wrap_content"
+                android:layout_marginVertical="10dp"
+                android:layout_marginStart="15dp"
+                android:layout_marginLeft="15dp"
+                android:text="@string/augmented_fourth"
+                android:textAllCaps="true"
+                android:textColor="@color/colorPrimaryDark"
+                android:textSize="18sp" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentRight="true"
+                android:layout_centerInParent="true"
+                android:layout_marginRight="65dp"
+                android:text="@string/high_score"
+                android:textSize="18sp" />
+
+            <TextView
+                android:id="@+id/augmentedFourthHigh"
                 android:layout_width="50dp"
                 android:layout_height="wrap_content"
                 android:layout_alignParentEnd="true"
@@ -302,15 +587,6 @@
             android:clickable="true">
 
             <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignParentRight="true"
-                android:layout_centerInParent="true"
-                android:layout_marginRight="65dp"
-                android:text="@string/high_score"
-                android:textSize="18sp" />
-
-            <TextView
                 android:id="@+id/intervalNoteText"
                 android:layout_width="210dp"
                 android:layout_height="wrap_content"
@@ -320,6 +596,15 @@
                 android:text="@string/interval_note_text"
                 android:textAllCaps="true"
                 android:textColor="@color/colorPrimaryDark"
+                android:textSize="18sp" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentRight="true"
+                android:layout_centerInParent="true"
+                android:layout_marginRight="65dp"
+                android:text="@string/high_score"
                 android:textSize="18sp" />
 
             <TextView
