--- a/app/src/main/res/layout/activity_tonality.xml
+++ b/app/src/main/res/layout/activity_tonality.xml
@@ -12,6 +12,15 @@
         android:layout_height="wrap_content"
         android:background="@color/colorPrimary"
         android:orientation="vertical">
+        <Button
+            android:id="@+id/theoryButton4"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="4dp"
+            android:layout_marginBottom="4dp"
+            android:background="@android:color/background_light"
+            android:text="Теория"
+            android:textSize="20sp" />
 
         <RelativeLayout
             android:id="@+id/ionianView"
@@ -19,7 +28,6 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="center_vertical"
-            android:layout_marginTop="4dp"
             android:layout_marginBottom="4dp"
             android:background="@android:color/background_light"
             android:clickable="true">
